# GenAIPractise

./: .env  .gitignore  main.py  pyproject.toml  rag_pipeline.ipynb  requirements.txt
AgenticAI/OpenAI/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
MCP/: lab1.ipynb  weather.py
MCP/sandbox/: Hyderabadi_Veg_Dum_Biryani_Recipe.md  palak_paneer_recipe.md
data/: test
faiss_index/: faiss.index  metadata.pkl
src/: data_loader.py  embeddings.py  search.py  vectorstore.py
